[flake8]
extend-ignore = D203

[metadata]
license_file = LICENSE

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 4
indent = "    "
force_sort_within_sections = true
